macos/Classes/trtc_c_api/trtc_cloud.h

// 1.1
trtc_c_api trtc_cloud trtc_cloud_get_instance(void* context);
// 1.2
trtc_c_api int trtc_cloud_destroy_instance(trtc_cloud instance);
// 2.1
trtc_c_api int trtc_cloud_enter_room(trtc_cloud instance, trtc_params_t param, int scene);
// 2.2
trtc_c_api int trtc_cloud_exit_room(trtc_cloud instance);
// 2.3
trtc_c_api int trtc_cloud_switch_role(trtc_cloud instance, int role);
// 2.5
trtc_c_api int trtc_cloud_switch_room(trtc_cloud instance, trtc_switch_room_config_t config);
// 2.6
trtc_c_api int trtc_cloud_connect_other_room(trtc_cloud instance, const char* json_params);
// 2.7
trtc_c_api int trtc_cloud_disconnect_other_room(trtc_cloud instance);
// 2.8
trtc_c_api int trtc_cloud_set_default_stream_recv_mode(trtc_cloud instance,
                                                       bool auto_recv_audio,
                                                       bool auto_recv_video);
// 2.9
trtc_c_api trtc_cloud trtc_cloud_create_sub_cloud(trtc_cloud instance);
// 2.10
trtc_c_api int trtc_cloud_destroy_sub_cloud(trtc_cloud instance, trtc_cloud sub_cloud);
// 3.1
trtc_c_api int trtc_cloud_start_publishing(trtc_cloud instance,
                                           const char* stream_id,
                                           int stream_type);
// 3.2
trtc_c_api int trtc_cloud_stop_publishing(trtc_cloud instance);