macos/tencent_rtc_sdk/Sources/tencent_rtc_sdk_c/include/trtc_c_api/trtc_dart_adapter.h

void LiteavFFIRegisterTRTCCloudObserver(int64_t sendPort,
                                                          trtc_cloud trtc_cloud_ptr);
void LiteavFFIUnRegisterTRTCCloudObserver(trtc_cloud trtc_cloud_ptr);
int LiteavFFIRegisterLogObserver(int64_t sendPort,
                                                   trtc_cloud trtc_cloud_ptr);
int LiteavFFIUnRegisterLogObserver(int64_t sendPort,
                                                     trtc_cloud trtc_cloud_ptr);
int LiteavFFIRegisterAudioFrameObserver(int64_t sendPort,
                                                          trtc_cloud trtc_cloud_ptr);
int LiteavFFIUnRegisterAudioFrameObserver(int64_t sendPort,
                                                            trtc_cloud trtc_cloud_ptr);