ios/tencent_rtc_sdk/Sources/tencent_rtc_sdk_c/include/trtc_c_api/trtc_cloud_callback.h

trtc_c_api trtc_cloud_callback trtc_cloud_create_cloud_callback(trtc_cloud instance);
trtc_c_api void trtc_cloud_destroy_cloud_callback(trtc_cloud_callback callback);