lib/bindings/trtc/ffi_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

import 'package:tencent_rtc_sdk/bindings/manager/manager_struct.dart';
import 'package:tencent_rtc_sdk/bindings/trtc/trtc_cloud_struct.dart';

/// Bindings for `src/ffi_test.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class FFIBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FFIBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FFIBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int InitDartApiDL(ffi.Pointer<ffi.Void> data) {
    return _InitDartApiDL(data);
  }

  late final _InitDartApiDLPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'LiteavFFIInitApiDL');
  late final _InitDartApiDL =
      _InitDartApiDLPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int callApi(
    trtc_cloud trtcCloud,
  ) {
    return _callApi(
      trtcCloud,
    );
  }

  late final _callApiPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>('callApi');
  late final _callApi = _callApiPtr.asFunction<int Function(trtc_cloud)>();

  void registerListener(int sender_port, trtc_cloud trtcCloud) {
    _registerListener(sender_port, trtcCloud);
  }

  late final _registerListenerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, trtc_cloud)>>(
          'LiteavFFIRegisterTRTCCloudObserver');
  late final _registerListener =
      _registerListenerPtr.asFunction<void Function(int, trtc_cloud)>();

  void unRegisterListener(trtc_cloud trtcCloud) {
    _unRegisterListener(trtcCloud);
  }

  late final _unRegisterListenerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(trtc_cloud)>>(
          'LiteavFFIUnRegisterTRTCCloudObserver');
  late final _unRegisterListener =
      _unRegisterListenerPtr.asFunction<void Function(trtc_cloud)>();

  int registerLogObserver(int sender_port, ffi.Pointer<ffi.Void> instance) {
    return _registerLogObserver(sender_port, instance);
  }

  late final _registerLogObserverPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Void>)>>(
      'LiteavFFIRegisterLogObserver');
  late final _registerLogObserver = _registerLogObserverPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Void>)>();

  int unRegisterLogObserver(
    int sender_port,
    ffi.Pointer<ffi.Void> instance,
  ) {
    return _unRegisterLogObserver(sender_port, instance);
  }

  late final _unRegisterLogObserverPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Void>)>>(
      'LiteavFFIUnRegisterLogObserver');
  late final _unRegisterLogObserver = _unRegisterLogObserverPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Void>)>();

  int registerAudioFrameObserver(
      int sender_port, ffi.Pointer<ffi.Void> instance) {
    return _registerAudioFrameObserver(sender_port, instance);
  }

  late final _registerAudioFrameObserverPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Void>)>>(
      'LiteavFFIRegisterAudioFrameObserver');
  late final _registerAudioFrameObserver = _registerAudioFrameObserverPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Void>)>();

  int unRegisterAudioFrameObserver(
      int sender_port, ffi.Pointer<ffi.Void> instance) {
    return _unRegisterAudioFrameObserver(sender_port, instance);
  }

  late final _unRegisterAudioFrameObserverPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Void>)>>(
      'LiteavFFIUnRegisterAudioFrameObserver');
  late final _unRegisterAudioFrameObserver = _unRegisterAudioFrameObserverPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Void>)>();

  void startLocalPreviewTexture(
      trtc_cloud trtcsharedInstanceNativePointer, int i, int textureId) {
    return _startLocalPreviewTexture(
        trtcsharedInstanceNativePointer, i, textureId);
  }

  late final _startLocalPreviewTexturePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(trtc_cloud, ffi.Int32, ffi.Int64)>>(
      'start_local_preview_texture');
  late final _startLocalPreviewTexture = _startLocalPreviewTexturePtr
      .asFunction<void Function(trtc_cloud, int, int)>();

  void startRemoteViewTexture(trtc_cloud trtcsharedInstanceNativePointer,
      ffi.Pointer<ffi.Int8> userId, int streamType, int textureId) {
    return _startRemoteViewTexture(
        trtcsharedInstanceNativePointer, userId, streamType, textureId);
  }

  late final _startRemoteViewTexturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(trtc_cloud, ffi.Pointer<ffi.Int8>, ffi.Int32,
              ffi.Int64)>>('start_remote_view_texture');
  late final _startRemoteViewTexture = _startRemoteViewTexturePtr
      .asFunction<void Function(trtc_cloud, ffi.Pointer<ffi.Int8>, int, int)>();

  /// 1.1
  trtc_cloud get_instance(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _get_instance(
      context,
    );
  }

  late final _get_instancePtr =
      _lookup<ffi.NativeFunction<trtc_cloud Function(ffi.Pointer<ffi.Void>)>>(
          'trtc_cloud_get_instance');
  late final _get_instance =
      _get_instancePtr.asFunction<trtc_cloud Function(ffi.Pointer<ffi.Void>)>();

  /// 1.2
  int destroy_instance(
    trtc_cloud instance,
  ) {
    return _destroy_instance(
      instance,
    );
  }

  late final _destroy_instancePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_destroy_instance');
  late final _destroy_instance =
      _destroy_instancePtr.asFunction<int Function(trtc_cloud)>();

  trtc_cloud_callback create_cloud_callback(trtc_cloud trtcCloud) {
    return _create_callback(trtcCloud);
  }

  late final _create_callbackPtr =
      _lookup<ffi.NativeFunction<trtc_cloud_callback Function(trtc_cloud)>>(
          'trtc_cloud_create_cloud_callback');
  late final _create_callback = _create_callbackPtr
      .asFunction<trtc_cloud_callback Function(trtc_cloud)>();

  void destroy_cloud_callback(trtc_cloud trtcCloud) {
    return _destroy_callback(trtcCloud);
  }

  late final _destroy_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(trtc_cloud_callback)>>(
          'trtc_cloud_destroy_cloud_callback');
  late final _destroy_callback =
      _destroy_callbackPtr.asFunction<void Function(trtc_cloud_callback)>();

  /// 2.1
  int enter_room(
    trtc_cloud instance,
    trtc_params_t param,
    int scene,
  ) {
    return _enter_room(
      instance,
      param,
      scene,
    );
  }

  late final _enter_roomPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              trtc_cloud, trtc_params_t, ffi.Int)>>('trtc_cloud_enter_room');
  late final _enter_room =
      _enter_roomPtr.asFunction<int Function(trtc_cloud, trtc_params_t, int)>();

  /// 2.2
  int exit_room(
    trtc_cloud instance,
  ) {
    return _exit_room(
      instance,
    );
  }

  late final _exit_roomPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_exit_room');
  late final _exit_room = _exit_roomPtr.asFunction<int Function(trtc_cloud)>();

  /// 2.3
  int switch_role(
    trtc_cloud instance,
    int role,
  ) {
    return _switch_role(
      instance,
      role,
    );
  }

  late final _switch_rolePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_switch_role');
  late final _switch_role =
      _switch_rolePtr.asFunction<int Function(trtc_cloud, int)>();

  /// 2.5
  int switch_room(
    trtc_cloud instance,
    trtc_switch_room_config_t config,
  ) {
    return _switch_room(
      instance,
      config,
    );
  }

  late final _switch_roomPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud,
              trtc_switch_room_config_t)>>('trtc_cloud_switch_room');
  late final _switch_room = _switch_roomPtr
      .asFunction<int Function(trtc_cloud, trtc_switch_room_config_t)>();

  /// 2.6
  int connect_other_room(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> json_params,
  ) {
    return _connect_other_room(
      instance,
      json_params,
    );
  }

  late final _connect_other_roomPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>)>>(
      'trtc_cloud_connect_other_room');
  late final _connect_other_room = _connect_other_roomPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>)>();

  /// 2.7
  int disconnect_other_room(
    trtc_cloud instance,
  ) {
    return _disconnect_other_room(
      instance,
    );
  }

  late final _disconnect_other_roomPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_disconnect_other_room');
  late final _disconnect_other_room =
      _disconnect_other_roomPtr.asFunction<int Function(trtc_cloud)>();

  /// 2.8
  int set_default_stream_recv_mode(
    trtc_cloud instance,
    bool auto_recv_audio,
    bool auto_recv_video,
  ) {
    return _set_default_stream_recv_mode(
      instance,
      auto_recv_audio,
      auto_recv_video,
    );
  }

  late final _set_default_stream_recv_modePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool, ffi.Bool)>>(
      'trtc_cloud_set_default_stream_recv_mode');
  late final _set_default_stream_recv_mode = _set_default_stream_recv_modePtr
      .asFunction<int Function(trtc_cloud, bool, bool)>();

  /// 2.9
  trtc_cloud create_sub_cloud(
    trtc_cloud instance,
  ) {
    return _create_sub_cloud(
      instance,
    );
  }

  late final _create_sub_cloudPtr =
      _lookup<ffi.NativeFunction<trtc_cloud Function(trtc_cloud)>>(
          'trtc_cloud_create_sub_cloud');
  late final _create_sub_cloud =
      _create_sub_cloudPtr.asFunction<trtc_cloud Function(trtc_cloud)>();

  /// 2.10
  int destroy_sub_cloud(
    trtc_cloud instance,
    trtc_cloud sub_cloud,
  ) {
    return _destroy_sub_cloud(
      instance,
      sub_cloud,
    );
  }

  late final _destroy_sub_cloudPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, trtc_cloud)>>(
          'trtc_cloud_destroy_sub_cloud');
  late final _destroy_sub_cloud =
      _destroy_sub_cloudPtr.asFunction<int Function(trtc_cloud, trtc_cloud)>();

  /// 3.1
  int start_publishing(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> stream_id,
    int stream_type,
  ) {
    return _start_publishing(
      instance,
      stream_id,
      stream_type,
    );
  }

  late final _start_publishingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('trtc_cloud_start_publishing');
  late final _start_publishing = _start_publishingPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int)>();

  /// 3.2
  int stop_publishing(
    trtc_cloud instance,
  ) {
    return _stop_publishing(
      instance,
    );
  }

  late final _stop_publishingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_publishing');
  late final _stop_publishing =
      _stop_publishingPtr.asFunction<int Function(trtc_cloud)>();

  /// 3.5
  int set_mix_transcoding_config(
    trtc_cloud instance,
    ffi.Pointer<trtc_transcoding_config_t> config,
  ) {
    return _set_mix_transcoding_config(
      instance,
      config,
    );
  }
